Perbaikan Tampilan UI Page Login

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="bone_white">#FCFBF7</color>
+    <color name="krem">#F2EDE8</color>
+    <color name="dark_green">#022F30</color>
+    <color name="whitee">#F2ECE7</color>
 </resources>
