--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,43 +4,68 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
-    android:gravity="center"
+    android:gravity="top"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="15sp"
+    android:padding="0sp"
+    android:background="@color/krem"
     tools:context=".Login">
 
 <!--section login-->
-    <TextView
-        android:text="@string/login"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        android:gravity="center"
-        android:layout_width="match_parent"
-        android:layout_marginBottom="20sp"
-        android:layout_height="wrap_content" />
 
-    <com.google.android.material.textfield.TextInputLayout
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/email"
-            android:hint="@string/email"
+        android:layout_height="400sp"
+        android:background="@drawable/green_bg"
+        android:orientation="vertical"
+        android:padding="20sp"
+        android:layout_marginBottom="100sp">
+
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-        
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20sp"
+            android:gravity="top|left"
+            android:lineHeight="100sp"
+            android:text="Yuk, makan sehat bareng kita !"
+            android:textColor="@color/whitee"
+            android:textSize="60sp"
+            android:textStyle="bold" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/password"
-            android:hint="@string/password"
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20sp"
+            android:gravity="bottom|right"
+            android:lineHeight="100sp"
+            android:text="#bitewise"
+            android:textColor="@color/whitee"
+            android:textSize="30sp"
+            android:textStyle="bold" />
+    </LinearLayout>
 
-    </com.google.android.material.textfield.TextInputLayout>
+<!--    <com.google.android.material.textfield.TextInputLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content">-->
+<!--        <com.google.android.material.textfield.TextInputEditText-->
+<!--            android:id="@+id/email"-->
+<!--            android:hint="@string/email"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"/>-->
+<!--        -->
+<!--    </com.google.android.material.textfield.TextInputLayout>-->
+
+<!--    <com.google.android.material.textfield.TextInputLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content">-->
+<!--        <com.google.android.material.textfield.TextInputEditText-->
+<!--            android:id="@+id/password"-->
+<!--            android:hint="@string/password"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"/>-->
+
+<!--    </com.google.android.material.textfield.TextInputLayout>-->
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -49,18 +74,57 @@
         android:layout_height="wrap_content"/>
 
     <Button
-        android:id="@+id/btn_login"
-        android:text="@string/login"
-        android:layout_width="wrap_content"
+        android:id="@+id/btn_login_google"
+        android:drawableLeft="@drawable/logo_google"
+        android:text="Masuk dengan Google"
+        android:layout_gravity="center_horizontal"
+        android:layout_width="350sp"
         android:layout_height="wrap_content"/>
 
+    <Button
+        android:id="@+id/btn_login_facebook"
+        android:text="Masuk dengan Facebook"
+        android:drawableLeft="@drawable/logo_facebook"
+        android:layout_gravity="center_horizontal"
+        android:layout_width="350sp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20sp"/>
+
     <TextView
-        android:textStyle="bold"
+        android:text="---- Atau ----"
         android:textSize="20sp"
-        android:gravity="center"
-        android:layout_marginBottom="20dp"
-        android:id="@+id/registerNow"
-        android:text="@string/click_to_register"
+        android:textStyle="bold"
+        android:gravity="center_horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_marginBottom="20sp"
+        android:layout_height="wrap_content"
+        android:lineHeight="100sp"/>
+
+    <Button
+        android:id="@+id/btn_login_Email"
+        android:text="Masuk dengan Email"
+        android:layout_gravity="center_horizontal"
+        android:layout_width="350sp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20sp"/>
+
+    <TextView
+        android:text="Belum punya Akun? buat akun di sini!"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        android:gravity="center_horizontal"
+        android:layout_width="match_parent"
+        android:layout_marginBottom="20sp"
+        android:layout_height="wrap_content"
+        android:lineHeight="100sp"/>
+
+<!--    <TextView-->
+<!--        android:textStyle="bold"-->
+<!--        android:textSize="20sp"-->
+<!--        android:gravity="center"-->
+<!--        android:layout_marginBottom="20dp"-->
+<!--        android:id="@+id/registerNow"-->
+<!--        android:text="@string/click_to_register"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"/>-->
 </LinearLayout>
